Fix: Command Injection | CWE:CWE-78 | Line:37