@@ -35,7 +35,7 @@ public class VulnerableApp {
         if (!ip.matches("^[0-9.]+$")) { throw new IllegalArgumentException("Invalid IP address"); }
         
         // CWE-78: OS Command Injection
-        Process process = Runtime.getRuntime().exec("ping -c 4 " + ip);
+        ProcessBuilder pb = new ProcessBuilder("ping", "-c", "4", ip); Process process = pb.start();
         BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
         String line;
         while ((line = reader.readLine()) != null) {
